[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/actors/DeadPlayerSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tiles/TestDungeonTiles.tres" type="TileSet" id=3]
[ext_resource path="res://src/actors/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/actors/Boss.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/actors/PlayerSpawnPoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/actors/Door.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/userinterface/UserInterface.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/actors/OrbitController.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/actors/BombEnemy.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/actors/Pickup.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/actors/EffectsHandler.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/actors/BigBoss.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/scripts/GameOverMonitor.gd" type="Script" id=14]
[ext_resource path="res://src/scripts/TestLevel.gd" type="Script" id=15]
[ext_resource path="res://src/actors/DialogueBox.tscn" type="PackedScene" id=16]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1544.94, 82.33, 0, 0, 0, 0, -1351.11, 83.5913, 0, 0, 0, 0, -1347.75, 189.544, 0, 0, 0, 0, -1545.36, 188.703, 0, 0, 0, 0, -1544.94, 82.33 )
}

[node name="TestLevel" type="Node2D"]
script = ExtResource( 15 )
__meta__ = {
"_edit_horizontal_guides_": [ 13.0, 149.047, 165.603 ],
"_edit_vertical_guides_": [ 65.75, 45.25, -137.505 ]
}

[node name="GameOverMonitor" type="Node" parent="."]
script = ExtResource( 14 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Polygon2D" parent="CanvasLayer" instance=ExtResource( 16 )]

[node name="UserInterface" parent="CanvasLayer" instance=ExtResource( 8 )]

[node name="TempBackground" type="ColorRect" parent="."]
margin_left = -1920.53
margin_top = -610.458
margin_right = 584.467
margin_bottom = 992.542
color = Color( 0.431373, 0.431373, 0.431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -536.321, -25.8361 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
collision_mask = 3
format = 1
tile_data = PoolIntArray( 35, 0, 0, 36, 0, 1, 37, 0, 1, 38, 0, 1, 39, 0, 2, 65571, 0, 65536, 65572, 0, 65537, 65573, 0, 65537, 65574, 0, 65537, 65575, 0, 65538, 196541, 0, 0, 196542, 0, 1, 196543, 0, 1, 196544, 0, 1, 196545, 0, 1, 196546, 0, 1, 196547, 0, 1, 196548, 0, 1, 196549, 0, 1, 196550, 0, 1, 196551, 0, 1, 196552, 0, 1, 196553, 0, 1, 196554, 0, 1, 196555, 0, 1, 196556, 0, 1, 196557, 0, 1, 196558, 0, 1, 196559, 0, 1, 196560, 0, 2, 131107, 0, 65536, 131108, 0, 65537, 131109, 0, 65537, 131110, 0, 65537, 131111, 0, 65538, 262077, 0, 65536, 262078, 0, 65537, 262079, 0, 65537, 262080, 0, 65537, 262081, 0, 65537, 262082, 0, 65537, 262083, 0, 65537, 262084, 0, 65537, 262085, 0, 65537, 262086, 0, 65537, 262087, 0, 65537, 262088, 0, 65537, 262089, 0, 65537, 262090, 0, 65537, 262091, 0, 65537, 262092, 0, 65537, 262093, 0, 65537, 262094, 0, 65537, 262095, 0, 65537, 262096, 0, 65538, 196643, 0, 65536, 196644, 0, 65537, 196645, 0, 65537, 196646, 0, 65537, 196647, 0, 65538, 327613, 0, 65536, 327614, 0, 65537, 327615, 0, 65537, 327616, 0, 65537, 327617, 0, 65537, 327618, 0, 65537, 327619, 0, 65537, 327620, 0, 65537, 327621, 0, 65537, 327622, 0, 65537, 327623, 0, 65537, 327624, 0, 65537, 327625, 0, 65537, 327626, 0, 65537, 327627, 0, 65537, 327628, 0, 65537, 327629, 0, 65537, 327630, 0, 65537, 327631, 0, 65537, 327632, 0, 65538, 327638, 0, 0, 327639, 0, 1, 327640, 0, 1, 327641, 0, 1, 327642, 0, 1, 327643, 0, 1, 327644, 0, 1, 327645, 0, 1, 327646, 0, 1, 327647, 0, 1, 327648, 0, 1, 327649, 0, 1, 327650, 0, 1, 327651, 0, 1, 327652, 0, 1, 327653, 0, 1, 327654, 0, 1, 327655, 0, 1, 327656, 0, 2, 262179, 0, 65536, 262180, 0, 65537, 262181, 0, 65537, 262182, 0, 65537, 262183, 0, 65538, 393149, 0, 65536, 393150, 0, 65537, 393151, 0, 65537, 393152, 0, 65537, 393153, 0, 65537, 393154, 0, 65537, 393155, 0, 65537, 393156, 0, 65537, 393157, 0, 65537, 393158, 0, 65537, 393159, 0, 65537, 393160, 0, 65537, 393161, 0, 65537, 393162, 0, 65537, 393163, 0, 65537, 393164, 0, 65537, 393165, 0, 65537, 393166, 0, 65537, 393167, 0, 65537, 393168, 0, 65538, 393174, 0, 65536, 393175, 0, 65537, 393176, 0, 65537, 393177, 0, 65537, 393178, 0, 65537, 393179, 0, 65537, 393180, 0, 65537, 393181, 0, 65537, 393182, 0, 65537, 393183, 0, 65537, 393184, 0, 65537, 393185, 0, 65537, 393186, 0, 65537, 393187, 0, 65537, 393188, 0, 65537, 393189, 0, 65537, 393190, 0, 65537, 393191, 0, 65537, 393192, 0, 65538, 393211, 0, 0, 393212, 0, 1, 393213, 0, 1, 393214, 0, 1, 393215, 0, 1, 327680, 0, 1, 327681, 0, 1, 327682, 0, 1, 327683, 0, 1, 327684, 0, 1, 327685, 0, 1, 327686, 0, 1, 327687, 0, 2, 327715, 0, 65536, 327716, 0, 65537, 327717, 0, 65537, 327718, 0, 65537, 327719, 0, 65538, 458685, 0, 65536, 458686, 0, 65537, 458687, 0, 65537, 458688, 0, 65537, 458689, 0, 65537, 458690, 0, 65537, 458691, 0, 65537, 458692, 0, 65537, 458693, 0, 65537, 458694, 0, 65537, 458695, 0, 65537, 458696, 0, 65537, 458697, 0, 65537, 458698, 0, 65537, 458699, 0, 65537, 458700, 0, 65537, 458701, 0, 65537, 458702, 0, 65537, 458703, 0, 65537, 458704, 0, 65538, 458710, 0, 65536, 458711, 0, 65537, 458712, 0, 65537, 458713, 0, 65537, 458714, 0, 65537, 458715, 0, 65537, 458716, 0, 65537, 458717, 0, 65537, 458718, 0, 65537, 458719, 0, 65537, 458720, 0, 65537, 458721, 0, 65537, 458722, 0, 65537, 458723, 0, 65537, 458724, 0, 65537, 458725, 0, 65537, 458726, 0, 65537, 458727, 0, 65537, 458728, 0, 65538, 458734, 0, 0, 458735, 0, 1, 458736, 0, 1, 458737, 0, 1, 458738, 0, 1, 458739, 0, 1, 458740, 0, 1, 458741, 0, 1, 458742, 0, 1, 458743, 0, 2, 458747, 0, 65536, 458748, 0, 65537, 458749, 0, 65537, 458750, 0, 65537, 458751, 0, 65537, 393216, 0, 65537, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65538, 393227, 0, 0, 393228, 0, 1, 393229, 0, 1, 393230, 0, 1, 393231, 0, 1, 393232, 0, 1, 393233, 0, 1, 393234, 0, 1, 393235, 0, 1, 393236, 0, 2, 393251, 0, 131072, 393252, 0, 65537, 393253, 0, 65537, 393254, 0, 131073, 393255, 0, 131074, 524221, 0, 65536, 524222, 0, 65537, 524223, 0, 65537, 524224, 0, 65537, 524225, 0, 65537, 524226, 0, 65537, 524227, 0, 65537, 524228, 0, 65537, 524229, 0, 65537, 524230, 0, 65537, 524231, 0, 65537, 524232, 0, 65537, 524233, 0, 65537, 524234, 0, 65537, 524235, 0, 65537, 524236, 0, 65537, 524237, 0, 65537, 524238, 0, 65537, 524239, 0, 65537, 524240, 0, 65538, 524246, 0, 65536, 524247, 0, 65537, 524248, 0, 65537, 524249, 0, 65537, 524250, 0, 65537, 524251, 0, 65537, 524252, 0, 65537, 524253, 0, 65537, 524254, 0, 65537, 524255, 0, 65537, 524256, 0, 65537, 524257, 0, 65537, 524258, 0, 65537, 524259, 0, 65537, 524260, 0, 65537, 524261, 0, 65537, 524262, 0, 65537, 524263, 0, 65537, 524264, 0, 65538, 524270, 0, 65536, 524271, 0, 65537, 524272, 0, 65537, 524273, 0, 65537, 524274, 0, 65537, 524275, 0, 65537, 524276, 0, 65537, 524277, 0, 65537, 524278, 0, 65537, 524279, 0, 65538, 524283, 0, 65536, 524284, 0, 65537, 524285, 0, 65537, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65538, 458763, 0, 65536, 458764, 0, 65537, 458765, 0, 65537, 458766, 0, 65537, 458767, 0, 65537, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65537, 458771, 0, 65537, 458772, 0, 65538, 458788, 0, 65536, 458789, 0, 65538, 589757, 0, 65536, 589758, 0, 65537, 589759, 0, 65537, 589760, 0, 65537, 589761, 0, 65537, 589762, 0, 65537, 589763, 0, 65537, 589764, 0, 65537, 589765, 0, 65537, 589766, 0, 65537, 589767, 0, 65537, 589768, 0, 65537, 589769, 0, 65537, 589770, 0, 65537, 589771, 0, 65537, 589772, 0, 65537, 589773, 0, 65537, 589774, 0, 65537, 589775, 0, 65537, 589776, 0, 65537, 589777, 0, 1, 589778, 0, 1, 589779, 0, 1, 589780, 0, 1, 589781, 0, 1, 589782, 0, 65537, 589783, 0, 65537, 589784, 0, 65537, 589785, 0, 65537, 589786, 0, 65537, 589787, 0, 65537, 589788, 0, 65537, 589789, 0, 65537, 589790, 0, 65537, 589791, 0, 65537, 589792, 0, 65537, 589793, 0, 65537, 589794, 0, 65537, 589795, 0, 65537, 589796, 0, 65537, 589797, 0, 65537, 589798, 0, 65537, 589799, 0, 65537, 589800, 0, 65538, 589806, 0, 65536, 589807, 0, 65537, 589808, 0, 65537, 589809, 0, 65537, 589810, 0, 65537, 589811, 0, 65537, 589812, 0, 65537, 589813, 0, 65537, 589814, 0, 65537, 589815, 0, 65538, 589819, 0, 65536, 589820, 0, 65537, 589821, 0, 65537, 589822, 0, 65537, 589823, 0, 65537, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65538, 524299, 0, 65536, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 65537, 524305, 0, 65537, 524306, 0, 65537, 524307, 0, 65537, 524308, 0, 65538, 524314, 0, 0, 524315, 0, 1, 524316, 0, 1, 524317, 0, 1, 524318, 0, 1, 524319, 0, 2, 524324, 0, 65536, 524325, 0, 65538, 655293, 0, 65536, 655294, 0, 65537, 655295, 0, 65537, 655296, 0, 65537, 655297, 0, 65537, 655298, 0, 65537, 655299, 0, 65537, 655300, 0, 65537, 655301, 0, 65537, 655302, 0, 65537, 655303, 0, 65537, 655304, 0, 65537, 655305, 0, 65537, 655306, 0, 65537, 655307, 0, 65537, 655308, 0, 65537, 655309, 0, 65537, 655310, 0, 65537, 655311, 0, 65537, 655312, 0, 65537, 655313, 0, 65537, 655314, 0, 65537, 655315, 0, 65537, 655316, 0, 65537, 655317, 0, 65537, 655318, 0, 65537, 655319, 0, 65537, 655320, 0, 65537, 655321, 0, 65537, 655322, 0, 65537, 655323, 0, 65537, 655324, 0, 65537, 655325, 0, 65537, 655326, 0, 65537, 655327, 0, 65537, 655328, 0, 65537, 655329, 0, 65537, 655330, 0, 65537, 655331, 0, 65537, 655332, 0, 65537, 655333, 0, 65537, 655334, 0, 65537, 655335, 0, 65537, 655336, 0, 65537, 655337, 0, 1, 655338, 0, 1, 655339, 0, 1, 655340, 0, 1, 655341, 0, 1, 655342, 0, 65537, 655343, 0, 65537, 655344, 0, 65537, 655345, 0, 65537, 655346, 0, 131073, 655347, 0, 131073, 655348, 0, 65537, 655349, 0, 65537, 655350, 0, 65537, 655351, 0, 65537, 655352, 0, 1, 655353, 0, 1, 655354, 0, 1, 655355, 0, 65537, 655356, 0, 65537, 655357, 0, 65537, 655358, 0, 65537, 655359, 0, 65537, 589824, 0, 65537, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 1, 589833, 0, 1, 589834, 0, 1, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537, 589839, 0, 65537, 589840, 0, 65537, 589841, 0, 65537, 589842, 0, 65537, 589843, 0, 65537, 589844, 0, 65538, 589850, 0, 65536, 589851, 0, 65537, 589852, 0, 65537, 589853, 0, 65537, 589854, 0, 65537, 589855, 0, 65538, 589860, 0, 65536, 589861, 0, 65538, 720829, 0, 65536, 720830, 0, 65537, 720831, 0, 65537, 720832, 0, 65537, 720833, 0, 65537, 720834, 0, 65537, 720835, 0, 65537, 720836, 0, 65537, 720837, 0, 65537, 720838, 0, 65537, 720839, 0, 65537, 720840, 0, 65537, 720841, 0, 65537, 720842, 0, 65537, 720843, 0, 65537, 720844, 0, 65537, 720845, 0, 65537, 720846, 0, 65537, 720847, 0, 65537, 720848, 0, 65537, 720849, 0, 131073, 720850, 0, 131073, 720851, 0, 131073, 720852, 0, 131073, 720853, 0, 131073, 720854, 0, 65537, 720855, 0, 65537, 720856, 0, 65537, 720857, 0, 65537, 720858, 0, 65537, 720859, 0, 65537, 720860, 0, 65537, 720861, 0, 65537, 720862, 0, 65537, 720863, 0, 65537, 720864, 0, 65537, 720865, 0, 65537, 720866, 0, 65537, 720867, 0, 65537, 720868, 0, 65537, 720869, 0, 65537, 720870, 0, 65537, 720871, 0, 65537, 720872, 0, 65537, 720873, 0, 65537, 720874, 0, 65537, 720875, 0, 65537, 720876, 0, 65537, 720877, 0, 65537, 720878, 0, 65537, 720879, 0, 65537, 720880, 0, 65537, 720881, 0, 65538, 720884, 0, 65536, 720885, 0, 65537, 720886, 0, 65537, 720887, 0, 65537, 720888, 0, 65537, 720889, 0, 65537, 720890, 0, 65537, 720891, 0, 65537, 720892, 0, 65537, 720893, 0, 65537, 720894, 0, 65537, 720895, 0, 65537, 655360, 0, 65537, 655361, 0, 65537, 655362, 0, 65537, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 65537, 655377, 0, 65537, 655378, 0, 65537, 655379, 0, 65537, 655380, 0, 65537, 655381, 0, 1, 655382, 0, 1, 655383, 0, 1, 655384, 0, 1, 655385, 0, 1, 655386, 0, 65537, 655387, 0, 65537, 655388, 0, 65537, 655389, 0, 65537, 655390, 0, 65537, 655391, 0, 65537, 655392, 0, 1, 655393, 0, 1, 655394, 0, 1, 655395, 0, 1, 655396, 0, 65537, 655397, 0, 65538, 786365, 0, 65536, 786366, 0, 65537, 786367, 0, 65537, 786368, 0, 65537, 786369, 0, 65537, 786370, 0, 65537, 786371, 0, 65537, 786372, 0, 65537, 786373, 0, 65537, 786374, 0, 65537, 786375, 0, 65537, 786376, 0, 65537, 786377, 0, 65537, 786378, 0, 65537, 786379, 0, 65537, 786380, 0, 65537, 786381, 0, 65537, 786382, 0, 65537, 786383, 0, 65537, 786384, 0, 65538, 786390, 0, 65536, 786391, 0, 65537, 786392, 0, 65537, 786393, 0, 65537, 786394, 0, 65537, 786395, 0, 65537, 786396, 0, 65537, 786397, 0, 65537, 786398, 0, 65537, 786399, 0, 65537, 786400, 0, 65537, 786401, 0, 65537, 786402, 0, 65537, 786403, 0, 65537, 786404, 0, 65537, 786405, 0, 65537, 786406, 0, 65537, 786407, 0, 65537, 786408, 0, 65537, 786409, 0, 131073, 786410, 0, 131073, 786411, 0, 131073, 786412, 0, 131073, 786413, 0, 131073, 786414, 0, 65537, 786415, 0, 65537, 786416, 0, 65537, 786417, 0, 65538, 786420, 0, 65536, 786421, 0, 65537, 786422, 0, 65537, 786423, 0, 65537, 786424, 0, 131073, 786425, 0, 131073, 786426, 0, 131073, 786427, 0, 65537, 786428, 0, 65537, 786429, 0, 65537, 786430, 0, 65537, 786431, 0, 65537, 720896, 0, 65537, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 131073, 720905, 0, 131073, 720906, 0, 131073, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65537, 720920, 0, 65537, 720921, 0, 65537, 720922, 0, 65537, 720923, 0, 65537, 720924, 0, 65537, 720925, 0, 65537, 720926, 0, 65537, 720927, 0, 65537, 720928, 0, 65537, 720929, 0, 65537, 720930, 0, 65537, 720931, 0, 65537, 720932, 0, 65537, 720933, 0, 65538, 851901, 0, 65536, 851902, 0, 65537, 851903, 0, 65537, 851904, 0, 65537, 851905, 0, 65537, 851906, 0, 65537, 851907, 0, 65537, 851908, 0, 65537, 851909, 0, 65537, 851910, 0, 65537, 851911, 0, 65537, 851912, 0, 65537, 851913, 0, 65537, 851914, 0, 65537, 851915, 0, 65537, 851916, 0, 65537, 851917, 0, 65537, 851918, 0, 65537, 851919, 0, 65537, 851920, 0, 65538, 851926, 0, 65536, 851927, 0, 65537, 851928, 0, 65537, 851929, 0, 65537, 851930, 0, 65537, 851931, 0, 65537, 851932, 0, 65537, 851933, 0, 65537, 851934, 0, 65537, 851935, 0, 65537, 851936, 0, 65537, 851937, 0, 65537, 851938, 0, 65537, 851939, 0, 65537, 851940, 0, 65537, 851941, 0, 65537, 851942, 0, 65537, 851943, 0, 65537, 851944, 0, 65538, 851950, 0, 65536, 851951, 0, 65537, 851952, 0, 65537, 851953, 0, 65538, 851956, 0, 65536, 851957, 0, 65537, 851958, 0, 65537, 851959, 0, 65538, 851963, 0, 65536, 851964, 0, 65537, 851965, 0, 65537, 851966, 0, 65537, 851967, 0, 65537, 786432, 0, 65537, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 65538, 786443, 0, 65536, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 65537, 786453, 0, 131073, 786454, 0, 131073, 786455, 0, 131073, 786456, 0, 131073, 786457, 0, 131073, 786458, 0, 65537, 786459, 0, 65537, 786460, 0, 65537, 786461, 0, 65537, 786462, 0, 65537, 786463, 0, 65537, 786464, 0, 65537, 786465, 0, 65537, 786466, 0, 65537, 786467, 0, 65537, 786468, 0, 65537, 786469, 0, 65538, 917437, 0, 65536, 917438, 0, 65537, 917439, 0, 65537, 917440, 0, 65537, 917441, 0, 65537, 917442, 0, 65537, 917443, 0, 65537, 917444, 0, 65537, 917445, 0, 65537, 917446, 0, 65537, 917447, 0, 65537, 917448, 0, 65537, 917449, 0, 65537, 917450, 0, 65537, 917451, 0, 65537, 917452, 0, 65537, 917453, 0, 65537, 917454, 0, 65537, 917455, 0, 65537, 917456, 0, 65538, 917462, 0, 65536, 917463, 0, 65537, 917464, 0, 65537, 917465, 0, 65537, 917466, 0, 65537, 917467, 0, 65537, 917468, 0, 65537, 917469, 0, 65537, 917470, 0, 65537, 917471, 0, 65537, 917472, 0, 65537, 917473, 0, 65537, 917474, 0, 65537, 917475, 0, 65537, 917476, 0, 65537, 917477, 0, 65537, 917478, 0, 65537, 917479, 0, 65537, 917480, 0, 65538, 917486, 0, 65536, 917487, 0, 65537, 917488, 0, 65537, 917489, 0, 65537, 917490, 0, 1, 917491, 0, 1, 917492, 0, 65537, 917493, 0, 65537, 917494, 0, 65537, 917495, 0, 65538, 917499, 0, 65536, 917500, 0, 65537, 917501, 0, 65537, 917502, 0, 65537, 917503, 0, 65537, 851968, 0, 65537, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 0, 65538, 851979, 0, 65536, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 65537, 851985, 0, 65537, 851986, 0, 65537, 851987, 0, 65537, 851988, 0, 65538, 851994, 0, 65536, 851995, 0, 65537, 851996, 0, 65537, 851997, 0, 65537, 851998, 0, 65537, 851999, 0, 65537, 852000, 0, 131073, 852001, 0, 131073, 852002, 0, 131073, 852003, 0, 131073, 852004, 0, 131073, 852005, 0, 131074, 982973, 0, 65536, 982974, 0, 65537, 982975, 0, 65537, 982976, 0, 65537, 982977, 0, 65537, 982978, 0, 65537, 982979, 0, 65537, 982980, 0, 65537, 982981, 0, 65537, 982982, 0, 65537, 982983, 0, 65537, 982984, 0, 65537, 982985, 0, 65537, 982986, 0, 65537, 982987, 0, 65537, 982988, 0, 65537, 982989, 0, 65537, 982990, 0, 65537, 982991, 0, 65537, 982992, 0, 65538, 982998, 0, 65536, 982999, 0, 65537, 983000, 0, 65537, 983001, 0, 65537, 983002, 0, 65537, 983003, 0, 65537, 983004, 0, 65537, 983005, 0, 65537, 983006, 0, 65537, 983007, 0, 65537, 983008, 0, 65537, 983009, 0, 65537, 983010, 0, 65537, 983011, 0, 65537, 983012, 0, 65537, 983013, 0, 65537, 983014, 0, 65537, 983015, 0, 65537, 983016, 0, 65538, 983022, 0, 65536, 983023, 0, 65537, 983024, 0, 65537, 983025, 0, 65537, 983026, 0, 65537, 983027, 0, 65537, 983028, 0, 65537, 983029, 0, 65537, 983030, 0, 65537, 983031, 0, 65538, 983035, 0, 65536, 983036, 0, 65537, 983037, 0, 65537, 983038, 0, 65537, 983039, 0, 65537, 917504, 0, 65537, 917505, 0, 65537, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65537, 917511, 0, 65538, 917515, 0, 65536, 917516, 0, 65537, 917517, 0, 65537, 917518, 0, 65537, 917519, 0, 65537, 917520, 0, 65537, 917521, 0, 65537, 917522, 0, 65537, 917523, 0, 65537, 917524, 0, 65538, 917530, 0, 131072, 917531, 0, 131073, 917532, 0, 131073, 917533, 0, 131073, 917534, 0, 131073, 917535, 0, 131074, 1048509, 0, 65536, 1048510, 0, 65537, 1048511, 0, 65537, 1048512, 0, 65537, 1048513, 0, 65537, 1048514, 0, 65537, 1048515, 0, 65537, 1048516, 0, 65537, 1048517, 0, 65537, 1048518, 0, 65537, 1048519, 0, 65537, 1048520, 0, 65537, 1048521, 0, 65537, 1048522, 0, 65537, 1048523, 0, 65537, 1048524, 0, 65537, 1048525, 0, 65537, 1048526, 0, 65537, 1048527, 0, 65537, 1048528, 0, 65538, 1048534, 0, 65536, 1048535, 0, 65537, 1048536, 0, 65537, 1048537, 0, 65537, 1048538, 0, 65537, 1048539, 0, 65537, 1048540, 0, 65537, 1048541, 0, 65537, 1048542, 0, 65537, 1048543, 0, 65537, 1048544, 0, 65537, 1048545, 0, 65537, 1048546, 0, 65537, 1048547, 0, 65537, 1048548, 0, 65537, 1048549, 0, 65537, 1048550, 0, 65537, 1048551, 0, 65537, 1048552, 0, 65538, 1048558, 0, 65536, 1048559, 0, 65537, 1048560, 0, 65537, 1048561, 0, 65537, 1048562, 0, 65537, 1048563, 0, 65537, 1048564, 0, 65537, 1048565, 0, 65537, 1048566, 0, 65537, 1048567, 0, 65538, 1048571, 0, 131072, 1048572, 0, 131073, 1048573, 0, 131073, 1048574, 0, 131073, 1048575, 0, 131073, 983040, 0, 131073, 983041, 0, 131073, 983042, 0, 131073, 983043, 0, 131073, 983044, 0, 131073, 983045, 0, 131073, 983046, 0, 131073, 983047, 0, 131074, 983051, 0, 65536, 983052, 0, 65537, 983053, 0, 65537, 983054, 0, 65537, 983055, 0, 65537, 983056, 0, 65537, 983057, 0, 65537, 983058, 0, 65537, 983059, 0, 65537, 983060, 0, 65538, 1114045, 0, 65536, 1114046, 0, 65537, 1114047, 0, 65537, 1114048, 0, 65537, 1114049, 0, 65537, 1114050, 0, 65537, 1114051, 0, 65537, 1114052, 0, 65537, 1114053, 0, 65537, 1114054, 0, 65537, 1114055, 0, 65537, 1114056, 0, 65537, 1114057, 0, 65537, 1114058, 0, 65537, 1114059, 0, 65537, 1114060, 0, 65537, 1114061, 0, 65537, 1114062, 0, 65537, 1114063, 0, 65537, 1114064, 0, 65538, 1114070, 0, 131072, 1114071, 0, 131073, 1114072, 0, 131073, 1114073, 0, 131073, 1114074, 0, 131073, 1114075, 0, 131073, 1114076, 0, 131073, 1114077, 0, 131073, 1114078, 0, 131073, 1114079, 0, 131073, 1114080, 0, 131073, 1114081, 0, 131073, 1114082, 0, 131073, 1114083, 0, 131073, 1114084, 0, 131073, 1114085, 0, 131073, 1114086, 0, 131073, 1114087, 0, 131073, 1114088, 0, 131074, 1114094, 0, 131072, 1114095, 0, 131073, 1114096, 0, 131073, 1114097, 0, 131073, 1114098, 0, 131073, 1114099, 0, 131073, 1114100, 0, 131073, 1114101, 0, 131073, 1114102, 0, 131073, 1114103, 0, 131074, 1048587, 0, 131072, 1048588, 0, 131073, 1048589, 0, 131073, 1048590, 0, 131073, 1048591, 0, 131073, 1048592, 0, 131073, 1048593, 0, 131073, 1048594, 0, 131073, 1048595, 0, 131073, 1048596, 0, 131074, 1179581, 0, 131072, 1179582, 0, 131073, 1179583, 0, 131073, 1179584, 0, 131073, 1179585, 0, 131073, 1179586, 0, 131073, 1179587, 0, 131073, 1179588, 0, 131073, 1179589, 0, 131073, 1179590, 0, 131073, 1179591, 0, 131073, 1179592, 0, 131073, 1179593, 0, 131073, 1179594, 0, 131073, 1179595, 0, 131073, 1179596, 0, 131073, 1179597, 0, 131073, 1179598, 0, 131073, 1179599, 0, 131073, 1179600, 0, 131074 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 62.0334, 38.5126 )
spawnPositionPath = NodePath("../PlayerSpawnPoint")

[node name="DeadPlayerSpawner" parent="." instance=ExtResource( 2 )]

[node name="Boss" parent="." instance=ExtResource( 5 )]
pause_mode = 2
position = Vector2( 61.8059, 22.2838 )

[node name="PlayerSpawnPoint" parent="." instance=ExtResource( 6 )]
position = Vector2( 63.0952, 59.1275 )

[node name="EffectsHandler" parent="." instance=ExtResource( 12 )]

[node name="Enemies" type="Node" parent="."]

[node name="Room 1" type="Node" parent="Enemies"]

[node name="Room1_Enemy" parent="Enemies/Room 1" instance=ExtResource( 4 )]
position = Vector2( -76.23, 154.519 )

[node name="Room 2" type="Node" parent="Enemies"]

[node name="Room2_Enemy1" parent="Enemies/Room 2" instance=ExtResource( 4 )]
position = Vector2( -317.833, 119.749 )

[node name="Room2_Enemy2" parent="Enemies/Room 2" instance=ExtResource( 4 )]
position = Vector2( -235.983, 212.251 )
direction = Vector2( 0, 1 )

[node name="Room 3" type="Node" parent="Enemies"]

[node name="Room2_1_Enemy" parent="Enemies/Room 3" instance=ExtResource( 4 )]
position = Vector2( -467.048, 92.7627 )
direction = Vector2( 0, 1 )

[node name="Room2_1_BombEnemy" parent="Enemies/Room 3" instance=ExtResource( 10 )]
position = Vector2( -550.093, 184.998 )
direction = Vector2( 0, -1 )

[node name="Pickup2" parent="Enemies/Room 3" instance=ExtResource( 11 )]
position = Vector2( -425.907, 141.616 )

[node name="Room 4" type="Node" parent="Enemies"]

[node name="Room3_BombEnemy" parent="Enemies/Room 4" instance=ExtResource( 10 )]
position = Vector2( -715.182, 179.442 )
direction = Vector2( -1, 0 )

[node name="Room3_Enemy1" parent="Enemies/Room 4" instance=ExtResource( 4 )]
position = Vector2( -792.551, 103.53 )
direction = Vector2( -1, 0 )

[node name="Room3_Enemy2" parent="Enemies/Room 4" instance=ExtResource( 4 )]
position = Vector2( -685.23, 216.494 )
direction = Vector2( -1, 0 )

[node name="Room 5" type="Node" parent="Enemies"]

[node name="OrbitController" parent="Enemies/Room 5" instance=ExtResource( 9 )]
position = Vector2( -1129.39, 137.361 )
radius = Vector2( 35, 35 )
rotation_duration = 2.0

[node name="Room4_BombEnemy" parent="Enemies/Room 5/OrbitController" instance=ExtResource( 10 )]
position = Vector2( 23.8788, -15.3808 )

[node name="Room4_Enemy1" parent="Enemies/Room 5/OrbitController" instance=ExtResource( 4 )]
position = Vector2( -27.3779, 29.6571 )
direction = Vector2( 0, 0 )

[node name="Room7_BombEnemy4" parent="Enemies/Room 5" instance=ExtResource( 10 )]
position = Vector2( -1052.16, 78.8996 )
direction = Vector2( 0, -1 )

[node name="OrbitController2" parent="Enemies/Room 5" instance=ExtResource( 9 )]
position = Vector2( -968.94, 134.143 )
radius = Vector2( 35, 35 )
rotation_duration = 2.0

[node name="Room4_BombEnemy2" parent="Enemies/Room 5/OrbitController2" instance=ExtResource( 10 )]
position = Vector2( 23.8788, -15.3808 )

[node name="Room4_Enemy2" parent="Enemies/Room 5/OrbitController2" instance=ExtResource( 4 )]
position = Vector2( -27.3779, 29.6571 )
direction = Vector2( 0, 0 )

[node name="Room 6" type="Node" parent="Enemies"]

[node name="Room3_Enemy3" parent="Enemies/Room 6" instance=ExtResource( 4 )]
position = Vector2( -1580.43, 37.0688 )
direction = Vector2( 0, 0 )

[node name="Room3_Enemy6" parent="Enemies/Room 6" instance=ExtResource( 4 )]
position = Vector2( -1585.59, 234.232 )
direction = Vector2( 0, 0 )

[node name="Room3_Enemy7" parent="Enemies/Room 6" instance=ExtResource( 4 )]
position = Vector2( -1442.2, 236.19 )
direction = Vector2( 0, 0 )

[node name="Room3_Enemy8" parent="Enemies/Room 6" instance=ExtResource( 4 )]
position = Vector2( -1311.28, 234.793 )
direction = Vector2( 0, 0 )

[node name="Room3_Enemy4" parent="Enemies/Room 6" instance=ExtResource( 4 )]
position = Vector2( -1445.98, 39.8441 )
direction = Vector2( 0, 0 )

[node name="Room3_Enemy5" parent="Enemies/Room 6" instance=ExtResource( 4 )]
position = Vector2( -1309.22, 39.4695 )
direction = Vector2( 0, 0 )

[node name="Path2D" type="Path2D" parent="Enemies/Room 6"]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Enemies/Room 6/Path2D"]
position = Vector2( -1544.26, 82.3344 )
offset = 1.0
rotate = false

[node name="BigBoss" parent="Enemies/Room 6/Path2D/PathFollow2D" instance=ExtResource( 13 )]
position = Vector2( -0.183228, -1.13136 )
rotation = -0.00650996
scale = Vector2( 1, 1 )

[node name="Pickup3" parent="Enemies/Room 6" instance=ExtResource( 11 )]
position = Vector2( -1297.58, 127.14 )

[node name="Doors" type="Node" parent="."]

[node name="Door" parent="Doors" instance=ExtResource( 7 )]
position = Vector2( -125.793, 171.887 )

[node name="Door2" parent="Doors" instance=ExtResource( 7 )]
position = Vector2( -365.876, 158.043 )

[node name="Door3" parent="Doors" instance=ExtResource( 7 )]
position = Vector2( -622.39, 156.305 )

[node name="Door4" parent="Doors" instance=ExtResource( 7 )]
position = Vector2( -829.964, 156.151 )

[node name="Door5" parent="Doors" instance=ExtResource( 7 )]
position = Vector2( -1215.06, 140.106 )

[node name="Checkpoints" type="Node" parent="."]

[node name="Pickup" parent="Checkpoints" instance=ExtResource( 11 )]
position = Vector2( -917.076, 139.476 )

[node name="Audio" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio"]

[node name="TestRoom" type="Node" parent="."]
